--- a/note/convert.ipynb
+++ b/note/convert.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-24T00:50:37.903603Z",
-     "start_time": "2024-05-24T00:50:37.888208Z"
+     "end_time": "2024-05-24T00:55:42.143277Z",
+     "start_time": "2024-05-24T00:55:42.121895Z"
     }
    },
    "outputs": [],
@@ -16,7 +16,7 @@
     "import json\n",
     "\n",
     "# Define the prefix list\n",
-    "prefixes = [\"/home/\", \"/product_detail/\", \"/view_all/\"]\n",
+    "prefixes = [\"/home\", \"/product_detail\", \"/view_all\"]\n",
     "\n",
     "# Open the openapi.json file and load the JSON data\n",
     "with open(\"../openapi.json\", \"r\") as f:\n",
@@ -29,12 +29,9 @@
     "        if path.startswith(prefix):\n",
     "            # Iterate over the operations\n",
     "            for operation, operation_data in path_data.items():\n",
-    "                # Check if the operation is \"post\"\n",
     "                # Add the \"tags\" field with the corresponding prefix\n",
     "                operation_data[\"tags\"] = [prefix.strip(\"/\")]\n",
-    "                # Modify the \"responses\" field\n",
-    "                operation_data[\"responses\"][\"200\"] = {}\n",
-    "                   \n",
+    "\n",
     "# Write the modified JSON data back to the openapi_2.json file\n",
     "with open(\"openapi_2.json\", \"w\") as f:\n",
     "    json.dump(data, f, indent=4)"
