--- a/note/convert.ipynb
+++ b/note/convert.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-24T00:55:42.143277Z",
-     "start_time": "2024-05-24T00:55:42.121895Z"
+     "end_time": "2024-05-24T01:02:56.113475Z",
+     "start_time": "2024-05-24T01:02:56.085330Z"
     }
    },
    "outputs": [],
@@ -33,7 +33,7 @@
     "                operation_data[\"tags\"] = [prefix.strip(\"/\")]\n",
     "\n",
     "# Write the modified JSON data back to the openapi_2.json file\n",
-    "with open(\"openapi_2.json\", \"w\") as f:\n",
+    "with open(\"../final_openapi.json\", \"w\") as f:\n",
     "    json.dump(data, f, indent=4)"
    ]
   },
